--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,4 +7,9 @@ page-home {
   .add-button {
     color: yellowgreen;
   }
+
+  .weather {
+    background: transparent;
+    text-align: center;
+  }
 }
